deps/v8/test/message/fail/modules-import6.out
*%(basename)s:7: SyntaxError: The requested module 'modules-import6.mjs' does not provide an export named 'c'
import {c} from "modules-import6.mjs";
        ^
SyntaxError: The requested module 'modules-import6.mjs' does not provide an export named 'c'

